# Stella

./: .gitignore  Cargo.toml  PLAN.md  README.md  rustfmt.toml
.github/workflows/: ci.yml
asm/: all_ops.asm  branch.asm  loop.asm  program.asm
src/: lib.rs  main.rs
src/compiler/: assembler.rs  gates.rs  mod.rs  obfuscator.rs  parser.rs
src/layer/: dense.rs  mod.rs
src/math/: chaos.rs  fix.rs  matrix.rs  mod.rs
src/vm/: engine.rs  mod.rs
