[package]
name = "stella_vm"
version = "0.1.0"
edition = "2021"
description = "Continuous-State Neural VM"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
rayon = { version = "1.8.1", optional = true }

[features]
default = ["std"]
std = ["serde/std", "rayon"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
strip = true
panic = "abort"
